--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_transactions.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_transactions.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/lvTransaction"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginBottom="100dp"
-    android:cacheColorHint="@android:color/transparent"/>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/background_main_frame"
+              android:orientation="vertical"
+              android:paddingBottom="50dp">
+
+    <ListView
+        android:id="@+id/lvTransaction"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:cacheColorHint="@android:color/transparent"/>
+
+</LinearLayout>
