--- a/WalletAnalyzing/app/src/main/res/layout/listview_item_category_parent.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/listview_item_category_parent.xml
@@ -5,7 +5,7 @@
               android:background="@android:color/white"
               android:gravity="center_vertical"
               android:orientation="horizontal"
-              android:padding="5dp">
+              android:padding="10dp">
 
 
     <TextView
@@ -14,8 +14,7 @@
         android:layout_height="match_parent"
         android:layout_weight="6"
         android:gravity="center_vertical"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"/>
+        android:textColor="@android:color/black"/>
 
     <ImageView
         android:id="@+id/ivUsing"
