--- a/WalletAnalyzing/app/src/main/res/layout/action_bar_account.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/action_bar_account.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:gravity="fill_horizontal">
@@ -16,7 +15,7 @@
         <View
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
         <TextView
             android:id="@+id/tvTitle"
@@ -27,7 +26,7 @@
             android:text="@string/title_account"
             android:textColor="@android:color/white"
             android:textSize="20sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -42,9 +41,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:padding="10dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/icon_edit"/>
+                android:padding="12dp"
+                android:scaleType="fitEnd"
+                android:src="@drawable/icon_edit" />
 
 
             <ImageView
@@ -52,9 +51,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:padding="10dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/icon_plus"/>
+                android:padding="12dp"
+                android:scaleType="fitEnd"
+                android:src="@drawable/icon_plus" />
 
 
             <ImageView
@@ -62,9 +61,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:padding="10dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/icon_done"/>
+                android:padding="12dp"
+                android:scaleType="fitEnd"
+                android:src="@drawable/icon_done"
+                android:visibility="gone" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
