--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_transaction_update.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_transaction_update.xml
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -886,9 +886,9 @@
             <LinearLayout
                 android:id="@+id/llAdjustment"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <LinearLayout
                     android:id="@+id/llAdjustmentAccount"
