--- a/WalletAnalyzing/app/src/main/res/layout/layout_dtmf.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_dtmf.xml
@@ -5,26 +5,26 @@
               android:background="@android:color/transparent"
               android:gravity="center"
               android:orientation="vertical"
-              android:weightSum="7">
+              android:weightSum="5">
 
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:gravity="center"
         android:orientation="vertical"
-        android:weightSum="2"
-        android:gravity="center">
+        android:weightSum="2">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:gravity="center"
             android:text="Enter Passcode"
             android:textColor="@android:color/white"
-            android:textStyle="bold"
             android:textSize="@dimen/passcode_text_size"
-            android:gravity="center"/>
+            android:textStyle="bold"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -66,196 +66,209 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        android:weightSum="3">
-        <Button
-            android:id="@+id/btnPasscode1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+        android:layout_weight="3"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:text="1"
-            android:textColor="#fff"
-            android:textStyle="bold"
-            android:textSize="@dimen/passcode_text_size"
-            android:background="@drawable/round_button"
-            android:layout_marginRight="10dp"
-            android:shadowColor="#A8A8A8"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="5"/>
-        <Button
-            android:id="@+id/btnPasscode2"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:weightSum="3">
+
+            <Button
+                android:id="@+id/btnPasscode1"
+                android:layout_width="@dimen/passcode_size"
+                android:layout_height="@dimen/passcode_size"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/round_button"
+                android:shadowColor="#A8A8A8"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="5"
+                android:text="1"
+                android:textColor="#fff"
+                android:textSize="@dimen/passcode_text_size"
+                android:textStyle="bold"/>
+
+            <Button
+                android:id="@+id/btnPasscode2"
+                android:layout_width="@dimen/passcode_size"
+                android:layout_height="@dimen/passcode_size"
+                android:background="@drawable/round_button"
+                android:shadowColor="#A8A8A8"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="5"
+                android:text="2"
+                android:textColor="#fff"
+                android:textSize="@dimen/passcode_text_size"
+                android:textStyle="bold"/>
+
+            <Button
+                android:id="@+id/btnPasscode3"
+                android:layout_width="@dimen/passcode_size"
+                android:layout_height="@dimen/passcode_size"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/round_button"
+                android:shadowColor="#A8A8A8"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="5"
+                android:text="3"
+                android:textColor="#fff"
+                android:textSize="@dimen/passcode_text_size"
+                android:textStyle="bold"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="1"
-            android:text="2"
-            android:textColor="#fff"
-            android:textStyle="bold"
-            android:textSize="@dimen/passcode_text_size"
-            android:background="@drawable/round_button"
-            android:shadowColor="#A8A8A8"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="5"/>
-        <Button
-            android:id="@+id/btnPasscode3"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:weightSum="3">
+
+            <Button
+                android:id="@+id/btnPasscode4"
+                android:layout_width="@dimen/passcode_size"
+                android:layout_height="@dimen/passcode_size"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/round_button"
+                android:shadowColor="#A8A8A8"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="5"
+                android:text="4"
+                android:textColor="#fff"
+                android:textSize="@dimen/passcode_text_size"
+                android:textStyle="bold"/>
+
+            <Button
+                android:id="@+id/btnPasscode5"
+                android:layout_width="@dimen/passcode_size"
+                android:layout_height="@dimen/passcode_size"
+                android:background="@drawable/round_button"
+                android:shadowColor="#A8A8A8"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="5"
+                android:text="5"
+                android:textColor="#fff"
+                android:textSize="@dimen/passcode_text_size"
+                android:textStyle="bold"/>
+
+            <Button
+                android:id="@+id/btnPasscode6"
+                android:layout_width="@dimen/passcode_size"
+                android:layout_height="@dimen/passcode_size"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/round_button"
+                android:shadowColor="#A8A8A8"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="5"
+                android:text="6"
+                android:textColor="#fff"
+                android:textSize="@dimen/passcode_text_size"
+                android:textStyle="bold"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="1"
-            android:text="3"
-            android:textColor="#fff"
-            android:textStyle="bold"
-            android:textSize="@dimen/passcode_text_size"
-            android:background="@drawable/round_button"
-            android:layout_marginLeft="10dp"
-            android:shadowColor="#A8A8A8"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="5"/>
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:weightSum="3">
+
+            <Button
+                android:id="@+id/btnPasscode7"
+                android:layout_width="@dimen/passcode_size"
+                android:layout_height="@dimen/passcode_size"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/round_button"
+                android:shadowColor="#A8A8A8"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="5"
+                android:text="7"
+                android:textColor="#fff"
+                android:textSize="@dimen/passcode_text_size"
+                android:textStyle="bold"/>
+
+            <Button
+                android:id="@+id/btnPasscode8"
+                android:layout_width="@dimen/passcode_size"
+                android:layout_height="@dimen/passcode_size"
+                android:background="@drawable/round_button"
+                android:shadowColor="#A8A8A8"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="5"
+                android:text="8"
+                android:textColor="#fff"
+                android:textSize="@dimen/passcode_text_size"
+                android:textStyle="bold"/>
+
+            <Button
+                android:id="@+id/btnPasscode9"
+                android:layout_width="@dimen/passcode_size"
+                android:layout_height="@dimen/passcode_size"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/round_button"
+                android:shadowColor="#A8A8A8"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="5"
+                android:text="9"
+                android:textColor="#fff"
+                android:textSize="@dimen/passcode_text_size"
+                android:textStyle="bold"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:weightSum="3">
+
+            <Button
+                android:id="@+id/btnPasscode0"
+                android:layout_width="@dimen/passcode_size"
+                android:layout_height="@dimen/passcode_size"
+                android:background="@drawable/round_button"
+                android:shadowColor="#A8A8A8"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="5"
+                android:text="0"
+                android:textColor="#fff"
+                android:textSize="@dimen/passcode_text_size"
+                android:textStyle="bold"/>
+        </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal"
-        android:weightSum="3">
-        <Button
-            android:id="@+id/btnPasscode4"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="4"
-            android:textColor="#fff"
-            android:textStyle="bold"
-            android:textSize="@dimen/passcode_text_size"
-            android:background="@drawable/round_button"
-            android:layout_marginRight="10dp"
-            android:shadowColor="#A8A8A8"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="5"/>
-        <Button
-            android:id="@+id/btnPasscode5"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="5"
-            android:textColor="#fff"
-            android:textStyle="bold"
-            android:textSize="@dimen/passcode_text_size"
-            android:background="@drawable/round_button"
-            android:shadowColor="#A8A8A8"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="5"/>
-        <Button
-            android:id="@+id/btnPasscode6"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="6"
-            android:textColor="#fff"
-            android:textStyle="bold"
-            android:textSize="@dimen/passcode_text_size"
-            android:background="@drawable/round_button"
-            android:layout_marginLeft="10dp"
-            android:shadowColor="#A8A8A8"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="5"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal"
-        android:weightSum="3">
-        <Button
-            android:id="@+id/btnPasscode7"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="7"
-            android:textColor="#fff"
-            android:textStyle="bold"
-            android:textSize="@dimen/passcode_text_size"
-            android:background="@drawable/round_button"
-            android:layout_marginRight="10dp"
-            android:shadowColor="#A8A8A8"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="5"/>
-        <Button
-            android:id="@+id/btnPasscode8"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="8"
-            android:textColor="#fff"
-            android:textStyle="bold"
-            android:textSize="@dimen/passcode_text_size"
-            android:background="@drawable/round_button"
-            android:shadowColor="#A8A8A8"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="5"/>
-        <Button
-            android:id="@+id/btnPasscode9"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="9"
-            android:textColor="#fff"
-            android:textStyle="bold"
-            android:textSize="@dimen/passcode_text_size"
-            android:background="@drawable/round_button"
-            android:layout_marginLeft="10dp"
-            android:shadowColor="#A8A8A8"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="5"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal"
-        android:weightSum="3">
-        <Button
-            android:id="@+id/btnPasscode0"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="0"
-            android:textColor="#fff"
-            android:textStyle="bold"
-            android:textSize="@dimen/passcode_text_size"
-            android:background="@drawable/round_button"
-            android:shadowColor="#A8A8A8"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="5"/>
-    </LinearLayout>
     <Button
         android:id="@+id/btnDelete"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:paddingRight="20dp"
-        android:text="Delete"
-        android:textStyle="bold"
+        android:text="@string/button_delete"
         android:textColor="@android:color/white"
         android:textSize="@dimen/passcode_text_size"
-        android:background="@android:color/transparent"/>
+        android:textStyle="bold"/>
 
 </LinearLayout>
