--- a/WalletAnalyzing/app/src/main/res/layout/listview_item_account_type.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/listview_item_account_type.xml
@@ -23,6 +23,7 @@
         android:layout_height="match_parent"
         android:layout_weight="5"
         android:gravity="center_vertical"
+        android:paddingLeft="10dp"
         android:text="@string/account_type_cash"
         android:textColor="@android:color/black"
         android:textStyle="bold"/>
