--- a/WalletAnalyzing/app/src/main/res/values/dimens.xml
+++ b/WalletAnalyzing/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
 
     <dimen name="actionbar_size">54dp</dimen>
 
+    <dimen name="passcode_size">80dp</dimen>
     <dimen name="passcode_text_size">25sp</dimen>
 
 </resources>
