--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_transaction_update.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_transaction_update.xml
@@ -1002,6 +1002,7 @@
                             android:weightSum="20">
 
                             <TextView
+                                android:id="@+id/tvTitleAdjustmentCategory"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="6"
