--- a/WalletAnalyzing/app/src/main/res/layout/layout_error_toast.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_error_toast.xml
@@ -12,7 +12,7 @@
         android:layout_width="10dp"
         android:layout_height="10dp"
         android:scaleType="fitCenter"
-        android:src="@drawable/icon_shrinking"/>
+        android:src="@drawable/icon_notification"/>
 
     <TextView
         android:id="@+id/tvError"
