--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_report.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_report.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@+id/lvReport"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:cacheColorHint="@android:color/transparent">
-
-</ListView>
+<LinearLayout
+    android:id="@+id/ll_report"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:cacheColorHint="@android:color/transparent"
+    android:orientation="vertical"/>
