--- a/WalletAnalyzing/app/src/main/res/layout/layout_activity_main.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_activity_main.xml
@@ -19,7 +19,7 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
-    <android.support.v4.view.ViewPager
+    <local.wallet.analyzing.View.CustomViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
