--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_list_budget.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_list_budget.xml
@@ -4,16 +4,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/background_main_frame">
+    android:background="@color/background_main_frame"
+    android:orientation="vertical">
 
     <ListView
         android:id="@+id/lvBudget"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:cacheColorHint="@android:color/transparent"
-        android:divider="@color/listview_divider"
-        android:dividerHeight="0.2dp"/>
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10dp"/>
 
     <!-- Here is the view to show if the list is emtpy -->
     <TextView
