--- a/WalletAnalyzing/app/src/main/res/drawable/budget_progress_ok.xml
+++ b/WalletAnalyzing/app/src/main/res/drawable/budget_progress_ok.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@android:id/background">
         <shape>
-            <corners android:radius="2dip" />
-            <solid android:color="@color/colorPrimary" />
+            <corners android:radius="2dip"/>
+            <solid android:color="@color/colorPrimary"/>
         </shape>
     </item>
-    <item android:id="@android:id/progress">
+
+
+    <item android:id="@android:id/secondaryProgress">
         <clip>
             <shape>
-                <corners android:radius="2dip" />
-                <solid android:color="@color/budget_background_progress_used_money" />
+                <corners android:radius="2dip"/>
+                <solid android:color="@color/budget_background_progress_used_money"/>
             </shape>
         </clip>
     </item>
