--- a/WalletAnalyzing/app/src/main/res/layout/listview_item_budget.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/listview_item_budget.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/background_budget_item"
-    android:orientation="horizontal"
-    android:padding="5dp"
-    android:weightSum="20">
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="@drawable/background_budget_item"
+              android:orientation="horizontal"
+              android:padding="5dp"
+              android:weightSum="20">
 
     <LinearLayout
         android:layout_width="0dp"
@@ -20,12 +20,12 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvCategory"
+                android:id="@+id/tvName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Giải trí "
                 android:textColor="@android:color/black"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/tvDate"
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:text="(01/01 - 31/01)"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"/>
         </LinearLayout>
 
         <LinearLayout
@@ -48,16 +48,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/budget_item_total"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"/>
 
             <TextView
                 android:id="@+id/tvBudgetAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:text="2.000.000đ"
+                android:text="2.000.000 đ"
                 android:textColor="@android:color/black"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
         </LinearLayout>
 
         <LinearLayout
@@ -77,7 +77,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/budget_item_expensed"
-                    android:textColor="@android:color/black" />
+                    android:textColor="@android:color/black"/>
 
                 <TextView
                     android:id="@+id/tvExpensed"
@@ -85,7 +85,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:text="2.000.000đ"
-                    android:textColor="@android:color/black" />
+                    android:textColor="@android:color/black"/>
             </LinearLayout>
 
             <LinearLayout
@@ -96,10 +96,11 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tvBalanceTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/budget_item_balance"
-                    android:textColor="@color/colorPrimary" />
+                    android:textColor="@color/colorPrimary"/>
 
                 <TextView
                     android:id="@+id/tvBalance"
@@ -107,21 +108,22 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:text="200.000đ"
-                    android:textColor="@color/colorPrimary" />
+                    android:textColor="@color/colorPrimary"/>
 
             </LinearLayout>
         </LinearLayout>
-
 
         <SeekBar
             android:id="@+id/sbExpensed"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="35dp"
             android:layout_marginTop="5dp"
-            android:alpha="@android:integer/config_longAnimTime"
-            android:progress="90"
-            android:progressDrawable="@drawable/budget_progress_over"
+            android:padding="0dp"
+            android:progress="10"
+            android:progressDrawable="@drawable/budget_progress_ok"
+            android:secondaryProgress="90"
+            android:thumb="@drawable/budget_progress_thumb"
             />
 
     </LinearLayout>
@@ -130,5 +132,5 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:src="@drawable/icon_next" />
+        android:src="@drawable/icon_next"/>
 </LinearLayout>
